# was

./: CMakeLists.txt  LICENSE  README.md  graphics.qrc  harbour-was.desktop
qml/: harbour-was.qml
qml/cover/: CoverPage.qml  PictureCover.qml
qml/dialogs/: AutoLoginOnStartDialog.qml  LoginDialog.qml  SaveLoginDataDialog.qml
qml/items/: AnimatedImage.qml  DictionaryPictureItem.qml
qml/pages/: AboutPage.qml  FirstPage.qml  LoginPage.qml  PicturePage.qml  SecondPage.qml  SettingsPage.qml
rpm/: harbour-was.changes.in  harbour-was.changes.run.in  harbour-was.spec
src/: harbour-was.cpp  secretsmanager.cpp  secretsmanager.h  settings.cpp  settings.h
src/connection/: asyncimageprovider.h  connection.cpp  connection.h  controller.cpp  controller.h  request.cpp  request.h
src/connection/requests/: countfoldersrequest.cpp  countfoldersrequest.h  countitemsrequest.cpp  countitemsrequest.h  getfoldersrequest.cpp  getfoldersrequest.h  getitemsrequest.cpp  getitemsrequest.h  getrootfoldersrequest.cpp  getrootfoldersrequest.h  getthumbnailrequest.cpp  getthumbnailrequest.h  loginrequest.cpp  loginrequest.h  logoutrequest.cpp  logoutrequest.h
src/models/: filelistmodel.cpp  filelistmodel.h  folderlistmodel.cpp  folderlistmodel.h  showpicturemodel.cpp  showpicturemodel.h
src/types/: dir.cpp  dir.h  file.cpp  file.h  filelist.cpp  filelist.h  filesmanager.cpp  filesmanager.h  image.cpp  image.h
translations/: harbour-was-pl.ts
